# Crew_AI

./: README.md
customer_support_agent/: README.md  app.py  pyproject.toml
customer_support_agent/src/DATABASE/: customers.json  knowledge_base.md  orders.json  products.json  tickets.json
customer_support_agent/src/customer_support_agent/: crew.py  main.py
customer_support_agent/src/customer_support_agent/config/: agents.yaml  tasks.yaml
customer_support_agent/tests/: tezt.txt
startup_idea_validator/: README.md  app.py  pyproject.toml
startup_idea_validator/output/: 01_idea_analysis.md  02_market_analysis.md  03_customer_research.md  04_final_report.md
startup_idea_validator/src/startup_idea_validator/: crew.py  main.py
startup_idea_validator/src/startup_idea_validator/config/: agents.yaml  tasks.yaml
