[project]
name = "customer_support_agent"
version = "0.1.0"
description = "customer_support_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.14.3",
    "streamlit>=1.28.0",
]

[project.scripts]
customer_support_agent = "customer_support_agent.main:run"
run_crew = "customer_support_agent.main:main"
train = "customer_support_agent.main:train"
replay = "customer_support_agent.main:replay"
test = "customer_support_agent.main:test"
run_with_trigger = "customer_support_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
